<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Quiz App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="note_msg">Note: You can create your quiz here and you can share it with others so that they can participate in it.</string>

    <!--    Developer Note-->
    <string name="developer_note">Developed by Magerramov Boris</string>


    <string name="quizes_created_by_me">Quizes created by me</string>
    <string name="log_out">Log out</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="create_a_quiz">Create a quiz</string>
    <string name="join_a_quiz">Join a quiz</string>
    <string name="create_quiz">Create Quiz</string>
    <string name="next_question">Next Question</string>
    <string name="question_no">Question No.</string>
    <string name="enter_question">Enter question</string>
    <string name="hint_question">question</string>
    <string name="enter_answer">Enter answer</string>
    <string name="hint_answer">answer</string>
    <string name="enter_option_one">Enter option one</string>
    <string name="option_one">option one</string>
    <string name="enter_option_two">Enter option two</string>
    <string name="hint_option_two">option two</string>
    <string name="enter_option_three">Enter option three</string>
    <string name="option_three">option three</string>
    <string name="enter_option_four">Enter option four</string>
    <string name="hint_option_four">option four</string>
    <string name="enter_time_for_this_question">Enter time for this question</string>
    <string name="in_seconds">(in Seconds)</string>
    <string name="hint_time_to_this_question">Time to this question</string>
    <string name="add_questions">Add questions</string>
    <string name="upload_quiz_image">Upload quiz image</string>
    <string name="enter_quiz_name">Enter quiz name</string>
    <string name="hint_quiz_name">quiz name</string>
    <string name="enter_quiz_description">Enter quiz description</string>
    <string name="quiz_description">quiz description</string>
    <string name="enter_total_number_of_questions">Enter total number of questions</string>
    <string name="hint_total_questions">total questions</string>
    <string name="difficulty_level">Difficulty level</string>
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="advanced">Advanced</string>
    <string name="quiz_created_by_me">Quiz created by me</string>
    <string name="detailDifficultyLevelID_difficulty_level">Difficulty Level</string>
    <string name="detailTotalQuestID_total_questions">Total Questions</string>
    <string name="detailYourScoreID_your_score">Your Score</string>
    <string name="detailYourScoreInfoID_na">NA</string>
    <string name="detailFragStartQuizButtonID_start_quiz">Start Quiz</string>
    <string name="joinedQuizzesFragTextID_quiz">Quiz</string>
    <string name="quizFrag_QuizNameID_quiz_name">Quiz name</string>
    <string name="quizFragQuesTitleID_question_no">Question No.</string>
    <string name="quizQuesNumbersID_0">0</string>
    <string name="quizTimerPrgrsbarID_0">0</string>
    <string name="quiz_question_loading_questions">Loading questions..</string>
    <string name="buttonOption_1_option1">option1</string>
    <string name="buttonOption_2_option2">option2</string>
    <string name="buttonOption_3_option3">option3</string>
    <string name="buttonOption_4_option4">option4</string>
    <string name="quizFrag_nextQuesButtonID_next_question">Next Question</string>
    <string name="results">Results</string>
    <string name="resultFrag_CorrectAnsID_correct_answers">Correct Answers</string>
    <string name="resultFrag_CorrectAns_NUM_ID_na">NA</string>
    <string name="resultFrag_WrongAnsID_wrong_answers">Wrong Answers</string>
    <string name="resultFrag_WrongAns_NUM_ID_na">NA</string>
    <string name="resultFrag_MissedAnsID_not_answered">Not Answered</string>
    <string name="resultFrag_MissedAns_NUM_ID_na">NA</string>
    <string name="resultFrag_gotoHomeButtonID_go_to_home">Go To Home</string>
    <string name="quizAppWelcomeScreen_quiz_app">Quiz App</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="enter_ID_text_text">Please paste unique ID below</string>
    <string name="submit_quizID_btn_submit">Submit</string>
    <string name="cancel_quizID_btn_cancel">Cancel</string>
    <string name="listFragViewQuizButtonID_text">View Quiz</string>
    <string name="menu_joinedQuizzesFragment_home">Home</string>
    <string name="menu_addFragment2_add">Add</string>
    <string name="menu_accountFragment_account">Account</string>
    <string name="errorNetworkId_text">Connection Error</string>
    <string name="check_internet_connection_text">please check your internet connection</string>
    <string name="exit_quiz_text__text">Exit</string>
    <string name="are_you_sure_text__text">Do you want to exit quiz ?</string>
    <string name="exit_yes_btn__text">Exit</string>
    <string name="continue_btn__text">No, Continue</string>
    <string name="my_account__text">My Account</string>
</resources>