<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.fragments.CreateQuizFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/discard_quiz_btn"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginStart="14dp"
            android:background="@android:color/transparent"
            android:src="@drawable/quiz_close_btn"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/add_question_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/add_question_btn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/create_quiz"
            android:textColor="@color/primary_color"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@id/add_question_btn"
            app:layout_constraintStart_toEndOf="@id/discard_quiz_btn"
            app:layout_constraintTop_toTopOf="@id/add_question_btn" />

        <android.widget.Button
            android:id="@+id/add_question_btn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/add_quiz_button_outline"
            android:foreground="?attr/selectableItemBackground"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/add_questions"
            android:textAllCaps="false"
            android:textColor="@color/primary_black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/note"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/note_bg"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/note_msg"
            android:textColor="@color/colorLightText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_question_btn" />

        <TextView
            android:id="@+id/upload_image_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="36dp"
            android:text="@string/upload_quiz_image"
            android:textColor="@color/primary_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/note" />

        <ImageView
            android:id="@+id/add_quiz_image"
            android:layout_width="0dp"
            android:layout_height="192dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/button_options_outline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/upload_image_hint" />



        <TextView
            android:id="@+id/enter_quiz_name_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/enter_quiz_name"
            android:textColor="@color/primary_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_quiz_image" />

        <EditText
            android:id="@+id/enter_quiz_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/button_options_outline"
            android:cursorVisible="true"
            android:hint="@string/hint_quiz_name"
            android:padding="16dp"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/colorLightText"
            android:textCursorDrawable="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/enter_quiz_name_hint" />

        <TextView
            android:id="@+id/enter_quiz_description_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/enter_quiz_description"
            android:textColor="@color/primary_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/enter_quiz_name" />

        <EditText
            android:id="@+id/enter_quiz_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/button_options_outline"
            android:hint="@string/quiz_description"
            android:padding="16dp"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/colorLightText"
            android:textCursorDrawable="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/enter_quiz_description_hint" />

        <TextView
            android:id="@+id/enter_quest_num_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/enter_total_number_of_questions"
            android:textColor="@color/primary_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/enter_quiz_description" />

        <EditText
            android:id="@+id/enter_quest_num"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/button_options_outline"
            android:hint="@string/hint_total_questions"
            android:inputType="number"
            android:padding="16dp"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/colorLightText"
            android:textCursorDrawable="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/enter_quest_num_hint" />


        <TextView
            android:id="@+id/select_difficulty_hint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:gravity="start"
            android:text="@string/difficulty_level"
            android:textColor="@color/primary_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/enter_quest_num" />


        <!-- radioGroup ensures that you can only select one button at a time-->
        <RadioGroup
            android:id="@+id/radio_grp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/select_difficulty_hint">

            <RadioButton
                android:id="@+id/radio_btn_beginner_level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@drawable/state_check_color"
                android:paddingStart="16dp"
                android:text="@string/beginner"
                android:textColor="@drawable/state_check_color"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/radio_btn_intermediate_level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@drawable/state_check_color"
                android:paddingStart="16dp"
                android:text="@string/intermediate"
                android:textColor="@drawable/state_check_color"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/radio_btn_advanced_level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@drawable/state_check_color"
                android:paddingStart="16dp"
                android:text="@string/advanced"
                android:textColor="@drawable/state_check_color"
                android:textSize="14sp" />
        </RadioGroup>

        <ImageView
            android:id="@+id/image_placeholder"
            android:layout_width="223dp"
            android:layout_height="137dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:src="@drawable/add_image"
            app:layout_constraintBottom_toBottomOf="@+id/add_quiz_image"
            app:layout_constraintEnd_toEndOf="@+id/add_quiz_image"
            app:layout_constraintStart_toStartOf="@+id/add_quiz_image"
            app:layout_constraintTop_toTopOf="@+id/add_quiz_image" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>