<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="32dp"
    android:background="@drawable/button_outline">

    <TextView
        android:id="@+id/exit_quiz_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/exit_quiz_text__text"
        android:textColor="@color/primary_text"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/are_you_sure_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/are_you_sure_text__text"
        android:textColor="@color/primary_text"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/exit_quiz_text"
        app:layout_constraintTop_toBottomOf="@id/exit_quiz_text" />


    <android.widget.Button
        android:id="@+id/exit_yes_btn"
        android:layout_width="54dp"
        android:layout_height="34dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_outline"
        android:padding="4dp"
        android:text="@string/exit_yes_btn__text"
        android:textAllCaps="false"
        android:textColor="@color/primary_text"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/are_you_sure_text"
        app:layout_constraintTop_toBottomOf="@+id/are_you_sure_text" />

    <android.widget.Button
        android:id="@+id/continue_btn"
        android:layout_width="114dp"
        android:layout_height="34dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/button_outline"
        android:padding="4dp"
        android:text="@string/continue_btn__text"
        android:textAllCaps="false"
        android:textColor="@color/primary_text"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/exit_yes_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>